{{$NEXT}}
  - Various documentation updates

0.007     2015-08-15 17:18:23 EDT
  - fix StrictWarnings parsing of "use VERSION" (Tux)
  - handle readline/readdir/each in WhileDiamondDefaultAssignment

0.006     2015-07-30 22:34:15 EDT
  - just use core policy for AmpersandSubCalls
  - add clarification for policies that are similar to core policies

0.005     2015-07-13 10:49:45 EDT
  - fix false positives in DollarAB policy

0.004     2015-07-01 17:21:16 EDT
  - use default strict/warnings importers from Perl::Critic::Utils::Constants

0.003     2015-06-27 17:53:00 EDT
  - allow prototypes containing &
  - add Each polciy
  - make StrictWarnings policy configurable with extra importers

0.002     2015-06-27 00:07:19 EDT
  - add AmpersandSubCalls policy
  - add policy abstracts

0.001     2015-06-26 21:01:32 EDT
  - First release